# junta-rs

./: Cargo.toml  test.yaml
junta/: Cargo.toml
junta-dart/: .gitignore  pubspec.yaml
junta-dart/lib/: client.dart  context.dart  junta.dart  logger.dart  service.dart
junta-dart/lib/protocols/: errors.dart  events.dart  protocols.dart  request.dart  response.dart  service.dart
junta-middleware/: Cargo.toml
junta-middleware/examples/: main.rs
junta-middleware/src/: chain.rs  lib.rs  middleware.rs
junta-persist/: Cargo.toml
junta-persist/examples/: main.rs
junta-persist/src/: lib.rs
junta-protocol/: Cargo.toml
junta-protocol/examples/: main.rs
junta-protocol/src/: chain.rs  context.rs  context_ext.rs  event.rs  lib.rs  middleware.rs  protocol.rs  protocol_ext.rs  request_protocol.rs  response_protocol.rs
junta-service/: Cargo.toml
junta-service/src/: client_ext.rs  context.rs  error.rs  lib.rs  middleware.rs  middleware_chain.rs  pipe_chain.rs  plugins.rs  service.rs  service_chain.rs  service_ext.rs  utils.rs
junta/examples/: main.rs
junta/src/: chain.rs  client.rs  client_ext.rs  context.rs  error.rs  handler.rs  lib.rs  plugins.rs  server.rs  utils.rs
junta_dart/: pubspec.yaml
junta_dart/lib/: client.dart  context.dart  junta.dart
junta_dart/lib/protocols/: events.dart  types.dart
