[package]
name = "junta-persist"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
junta = { path = "../junta" }
junta-service = { path = "../junta-service" }
#junta-middleware = { path = "../junta-middleware" }


[dev-dependencies]
slog-term = "^2.4"
slog-async = "^2.3"
tokio = "^0.1"
slog = "^2.4"
futures = "^0.1"

[[example]]
name = "junta-persist"
path = "examples/main.rs"