[package]
name = "junta-protocol"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
junta = { path = "../junta", features = ["encoding"] }
junta-persist = { path = "../junta-persist" }
junta-service = { path = "../junta-service" }
future-ext = { git = "https://github.com/kildevaeld/future-ext" }
futures = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_cbor = "*"
erased-serde = "0.3"
serde_json = "^1.0"
slog = "^2.4"
typemap = "^0.3"
atomic-counter =  "1.0"
#serde_repr = "0.1"

[dev-dependencies]
slog-term = "^2.4"
slog-async = "^2.3"
tokio = "^0.1"


[[example]]
name = "junta"
path = "examples/main.rs"