[package]
name = "junta"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
websocket = "~0.22"
tokio = "~0.1.18"
futures = "~0.1"
slog = "~2.4"
uuid = { version = "~0.7.4", features  = [ "v4"] } 
# serde = "^1.0"
# serde_derive = "^1.0"
# serde_json = "^1.0"
# serde_cbor = "*"
# erased-serde = "0.3"

