[package]
name = "junta"
version = "0.1.0"
authors = ["Rasmus Kildevaeld <rasmuskildevaeld@gmail.com>"]
edition = "2018"

[dependencies]
websocket = "~0.22"
tokio = "~0.1.18"
futures = "~0.1"
slog = "~2.4"
typemap = "^0.3"
uuid = { version = "~0.7.4", features  = [ "v4"] } 
serde = { version = "^1.0", optional = true }
serde_json ={ version = "^1.0", optional = true }
serde_cbor = { version = "*", optional = true }
atomic-counter =  "1.0"
junta-service = { path = "../junta-service" }
future-ext = { git = "https://github.com/kildevaeld/future-ext" }

[dev-dependencies]
void = "1.0"
slog-term = "^2.4"
slog-async = "^2.3"

[features]
defaults = []
encoding = ["serde", "serde_json", "serde_cbor"]

[[example]]
name = "junta2"
path = "examples/main.rs"
